--- a/module-4/studio/.env.example
+++ b/module-4/studio/.env.example
@@ -1,2 +1,7 @@
-OPENAI_API_KEY=sk-xxx
+
 TAVILY_API_KEY="tvly-xxxx"
+AZURE_ENDPOINT="https://your-deployment.openai.azure.com/"
+AZURE_DEPLOYMENT="gpt-4o"
+API_VERSION="2024-08-01-preview"
+OPENAI_API_TYPE="azure_ad"
+MODEL="gpt-4o"
