--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+TAVILY_API_KEY=<TAVILY_API_KEY>
+
 AZURE_ENDPOINT="https://your-deployment.openai.azure.com/"
 AZURE_DEPLOYMENT="gpt-4o"
 API_VERSION="2024-08-01-preview"
